fix: Hide horizontal overflow text on posts where word length is greater than width

--- a/app/scss/ila.scss
+++ b/app/scss/ila.scss
@@ -100,6 +100,10 @@ header.microblog {
 			}
 		}
 	}
+	p {
+		overflow-x: hidden;
+		text-overflow: ellipsis;
+	}
 }
 
 .ap-object-expanded {
